# CodeRepositoryTCST

./: .gitignore  CMakeLists.txt  README.md  package.xml  readme.md  set_ros_master.sh  turtlebot_environment.sh  turtlebot_environment.sh~
bags/: _2018-03-22-15-20-43.bag
formula_parser/: CMakeLists.txt
hybrid_controller/: CMakeLists.txt
hybrid_controller/include/: CriticalEventParam.h  arma_ros_std_conversions.h
hybrid_controller/launch/: formation.launch  formulas.yaml  playback.launch  robot.launch  test.launch  testi.launch
hybrid_controller/msg/: CriticalEvent.msg  Params.msg
hybrid_controller/src/: PFC.cpp
include/: CollaborationRequestParam.h  CriticalEventParam.h  PFC.hpp  PPC.cpp  PPC.hpp  arma_ros_conversions.h  arma_ros_std_conversions.h  formula_parser.hpp
include/armadillo_bits/: config.hpp~
launch/: formation.launch  formation.yaml  formation_derivatives.yaml  formula_derivatives.yaml  formula_derivatives3.yaml  formulas.yaml  formulas3.yaml  formulas_intermediate.yaml  main.launch  playback.launch  record.launch  robot.launch  scenario1_derivatives.yaml  scenario2.yaml  test.launch  test3.launch  test_scenario.launch  testi.launch
ltl_gui/: README.md  set_ros_master.sh
ltl_gui/rqt_simulation/: mainpage.dox  plugin.xml  setup.py
ltl_gui/rqt_simulation_msgs/: README.md
msg/: ControlInput.msg  CriticalEvent.msg  HybridState.msg  Robustness.msg
rqt_experiment/: CMakeLists.txt  CMakeLists.txt~  package.xml  plugin.xml  setup.py
rqt_experiment/launch/: robot.launch  (+3 more)
rqt_simulation/: CMakeLists.txt  CMakeLists.txt~  package.xml  plugin.xml
rqt_simulation/config/: costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  gui_config.yaml  gui_config.yaml~  qualisys_models.yaml
rqt_simulation/config/FTS/: collision_avoidance_test.yaml  env_GUI.yaml  exp_20-04.yaml  hotel_FTS.yaml  hotel_scenario.yaml  mocap_to_map_calibration.yaml
rqt_simulation/config/planner/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base_params.yaml
rqt_simulation/config/planner/nexus/: costmap_common_params.yaml
rqt_simulation/config/rviz/: auto_gen.rviz  multiple_tiago.rviz  single_tiago.rviz  triple_tiago.rviz  turtlebot.rviz  turtlebot_exp.rviz  turtlebot_test.rviz
rqt_simulation/config/task/: task.yaml
rqt_simulation/include/rqt_simulation/: CustomComboBox.py  CustomPushButton.py  FTS.py  MapGraphicsScene.py  MapUtiles.py  ROS_Publisher.py  ROS_Subscriber.py  RVIZFileGenerator.py  RobotTab.py  TemporaryTask_dialog.py  WidgetUtiles.py  _move_base_wrapper_py.py  change_FTS_dialog.py  generalAP_dialog.py  map_dialog.py  move_base_wrapper.cpp
rqt_simulation/launch/: gazebo_world.launch  ltl_planner.launch  qualisys_mapper.launch  qualisys_odom.launch  qualysis_mapper.launch  remote_turtlebot.sh  remote_turtlebot.sh~  robot.launch  robot_exp.launch  robot_exp_crazyflie.launch  robot_exp_nexus.launch  robot_exp_turtlebot.launch  robot_srd250.launch  robot_srd250.launch~  robot_tiago_steel.launch  robot_turtlebot.launch  rosbag_writer.launch  rviz.launch  setup_simulation.launch  tiago_gazebo.launch  turtlebot_base_astra.launch  turtlebot_navigation.launch
rqt_simulation/logging/: robot1_temp_task2018-07-03-10-18.txt  robot1_temp_task2018-07-03-13-59.txt  robot1_trajectory_2018-07-03-10-18.txt  robot1_trajectory_2018-07-03-13-59.txt  robot1_trajectory_2018-07-19-14-17.txt
rqt_simulation/models/bar_70_30_10/: model.config
rqt_simulation/models/factory_walls/: factory.dae
rqt_simulation/models/hospital_walls/: hospital.dae  model.config
rqt_simulation/models/hotel_walls/: hotel.sdf
rqt_simulation/models/kth_walls/: kth.dae  model.config
rqt_simulation/models/rng_walls/: model.config  rng.sdf
rqt_simulation/resource/: SimulationPlugin.ui  add_ap.ui  change_FTS.ui  general_ap.ui  map.ui
rqt_simulation/scenarios/factory/: context.yaml  env.yaml  env_GUI.yaml  map.yaml  semantics.yaml  spawn_robots.launch.xml  tests.yaml
rqt_simulation/scenarios/hospital/: context.yaml  spawn_robots.launch.xml  tests.yaml
rqt_simulation/scenarios/hotel/: context.yaml  env.yaml  env_GUI.yaml  map.yaml  semantics.yaml  sensor.yaml  tests.yaml
rqt_simulation/scenarios/kth/: context.yaml  map.yaml  robot.yaml
rqt_simulation/scenarios/pal_office/: env_GUI.yaml  env_GUI.yaml~  map.yaml  spawn_robots.launch.xml  task.yaml
rqt_simulation/scenarios/rng/: context.yaml  env.yaml  map.yaml  spawn_robots.launch.xml  tests.yaml
rqt_simulation/scenarios/sml/: map.yaml  map.yaml~  map_old.pgm  map_old.yaml
rqt_simulation/scenarios/sml_arena/: map.yaml
rqt_simulation/src/: Plotter.py  amcl_pose_to_2D_Euler.py  ltl_planner.py  ltl_planner2.py  ltl_planner_old.py  plotter.py  visualize_fts.py
rqt_simulation/src/ltl_tools/: FTSLoader.py  automaton_vis.py  discrete_plan.py  fts_loader.py  planner.py  product.py  temporary_task.py  ts.py
rqt_simulation/src/rqt_simulation/: QualisysMapTf.py  RVOController.py  dialog.cpp  initial_pose.py  map_dialog.py  map_dialog.py.autosave  move_base_service_caller.cpp  move_base_service_caller.py  omnibot_controller.py  qualisys_map_tf.py  rosbag_writer.py  simulation_module.py  simulation_widget.py  simulation_widget.py.autosave
rqt_simulation/urdf/components/: imu.urdf.xacro
rqt_simulation/worlds/gazebo/: factory.world  hospital.world  hotel.world  kth.world  ms1_demo.world  pal_office.world  rng.world
rqt_simulation/worlds/stage/: hotel.world  kth.world  pal_office.world
rqt_simulation_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
rqt_simulation_msgs/msg/: Edge.msg~  Roi.msg  Roi.msg~  Sense.msg  Sense.msg~  TemporaryTask.msg
sim_GUI/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
sml/: sml_map.yaml
src/: PFC.cpp  PPC.cpp  exprtk.cpp  hybrid_controller_node.cpp  plotter_node.py  robot_node.cpp  test.cpp
stl_ppc_controller/plotter/: CMakeLists.txt
stl_ppc_controller/plotter/src/: plotter_node.py
(+105 files in other folders)
