<?xml version="1.0"?>
<package>
  <name>formula_parser</name>
  <version>0.0.0</version>
  <description>The formula_parser package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
