<?xml version="1.0"?>
<package>
  <name>hybrid_controller</name>
  <version>0.0.0</version>

  <description>The hybrid_controller package</description>
  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>formula_parser</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>formula_parser</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
