<package>
<name>rqt_simulation</name>
<version>0.3.11</version>
  <description> rqt simulation plugin  </description>
  <maintainer email="lukasch@student.ethz.ch">Lukas Schoenbaechler</maintainer>
  <author>lukas</author>
  <license>BSD</license>
  <!--<url>http://ros.org/wiki/rqt_mypkg</url> -->

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>c4r_simulation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sim_GUI</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
