<package>
  <name>rqt_simulation_msgs</name>
  <version>0.4.1</version>
  <description>rqt_simulation_msgs</description>
  <author email="lesch@kth.se">Lukas Schoenbaechler</author>
  <maintainer email="lesch@kth.se">Lukas Schoenbaechler</maintainer>
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
